fix: TreeSelect colors in dark mode

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -6617,7 +6617,6 @@ input.hide-input-arrows {
 
 .custom-checkbox-tree {
   overflow-y: scroll;
-  color: #3e525b;
 
   .react-checkbox-tree label:hover {
     background: none !important;
@@ -6628,13 +6627,14 @@ input.hide-input-arrows {
     .rct-icon-expand-open,
     .rct-icon-expand-close {
       &::before {
-        content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1024 1024' focusable='false' data-icon='caret-down' width='12px' height='12px' fill='currentColor' aria-hidden='true'%3E%3Cpath d='M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z'%3E%3C/path%3E%3C/svg%3E") !important;
+        content: "\2BC8";
+        font-size: 16px;
       }
     }
 
-    .rct-icon-expand-close {
-      transform: rotate(-90deg);
-      -webkit-transform: rotate(-90deg);
+    .rct-icon-expand-open {
+      transform: rotate(90deg);
+      -webkit-transform: rotate(90deg);
     }
   }
 }
